fixture-catalog/fixtures/core/valid/fragments/multiple-files/user.ts
import { gql } from "../../../../../graphql-system";

export const userFragment = gql.default(({ fragment }) =>
  fragment`fragment UserFragment on Employee { id name email }`(),
);
